content: Prevent long words from overflowing their containers
This patch targets several pieces of content that often contain
long words that overflow the page container:
- Page title: add `<wbr>` tags between title elements, which will
  break the title on the `.` separators first. Also, wrap the
  item name in a class and set `word-wrap: break-word` on it, to
  break up the name if needed (e.g. ComplexNamespaceInputWidget).
- Method and member names: Wrap the actual name in a class and
  set `word-break: break-all` on it to break it anywhere. This
  is more aesthetically appropriate for these sub-headings.
- Details (e.g. source links, authors): Add mobile styles,
  improve tablet styles, and break the text if needed.
- Code samples: add horizontal scroll if needed to prevent
  word breaks.
- Paragraphs: add `overflow-wrap: break-word` for all p tags to
  break up long text like links in all browsers
- Inline code: add `max-width: 100%` to prevent overflow due to
  long strings in inline code

Bug: T356336

--- a/static/styles/elements.css
+++ b/static/styles/elements.css
@@ -90,6 +90,7 @@ pre,
 
 p {
 	margin: 3.2rem 0 0;
+	overflow-wrap: break-word;
 }
 
 h1 + p,
@@ -162,6 +163,8 @@ sup {
 code {
 	background-color: var( --background-color-interactive-subtle );
 	display: inline-block;
+	/* Support: Chrome - prevent overflow for long code blocks. */
+	max-width: 100%;
 	padding: 0.2rem 0.4rem;
 	font-size: 1.4rem;
 }
@@ -180,6 +183,8 @@ code,
 pre {
 	white-space: pre-wrap;
 	word-wrap: break-word;
+	/* Make scrollable on very small screens if necessary. */
+	overflow-x: auto;
 }
 
 /* Support Blink based browsers. */
